# barbeloni

./: .gitignore  README.md
app/Barbeloni/Barbeloni/: Barbeloni.entitlements  BarbeloniApp.swift  BluetoothManager.swift  ContentView.swift  Info.plist
app/Barbeloni/Barbeloni.xcodeproj/: project.pbxproj
app/Barbeloni/Barbeloni.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
app/Barbeloni/Barbeloni.xcodeproj/project.xcworkspace/xcuserdata/alberto.xcuserdatad/: UserInterfaceState.xcuserstate
app/Barbeloni/Barbeloni/App/: BarbeloniApp.swift
app/Barbeloni/Barbeloni/Models/: FitnessData.swift  UserData.swift
app/Barbeloni/Barbeloni/Services/: AuthenticationService.swift  BluetoothManager.swift  WorkoutDataService.swift  WorkoutSessionManager.swift
app/Barbeloni/Barbeloni/ViewModels/: AppCoordinator.swift  AuthViewModel.swift  WorkoutViewModel.swift
app/Barbeloni/Barbeloni/Views/: ActiveWorkoutView.swift  AuthenticationView.swift  ContentView.swift  ExerciseSetupView.swift  HomeView.swift  LiveDataView.swift  MainCoordinatorView.swift  SettingsView.swift  SimpleMainView.swift  SimplifiedWorkoutView.swift  StatusCardView.swift  WorkoutControlsView.swift  WorkoutDetailView.swift  WorkoutHistoryView.swift  WorkoutMetricsView.swift  WorkoutRowView.swift
app/Barbeloni/Barbeloni/Views/Auth/: AuthenticationView.swift
app/Barbeloni/Barbeloni/Views/Settings/: SettingsView.swift
app/Barbeloni/Barbeloni/Views/Workout/: ActiveWorkoutView.swift  WorkoutListView.swift
app/Barbeloni/BarbeloniTests/: BarbeloniTests.swift
app/Barbeloni/BarbeloniUITests/: BarbeloniUITests.swift  BarbeloniUITestsLaunchTests.swift
embedded/: platformio.ini
embedded/src/: main.cpp
modeling/: pyproject.toml
modeling/barbeloni/: firebase.py  rep_detection.py  utils.py
modeling/playground/: rep_count.py
(+1 files in other folders)
